--- a/style.css
+++ b/style.css
@@ -56,3 +56,17 @@ h1 {
     color: #004488;
     margin-top: 10px;
 }
+@media (max-width: 600px) {
+    .counter-item {
+        width: 100%;
+    }
+    .counter-value {
+        font-size: 48px;
+    }
+    .counter-label {
+        font-size: 16px;
+    }
+    .counter-box {
+        flex-wrap: nowrap;
+    }
+}
