--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 html, body {
     height: 100%;
     overflow: hidden;
+    margin: 0;
 }
 body {
     background-color: #f2f9ff;
@@ -15,28 +16,58 @@ h1 {
     color: #333;
     margin-top: 50px;
 }
-.container {
+#content {
     width: 100%;
+    max-width: 650px;
     height: 100vh;
     min-height: 100%;
+    background-color: #e6f0ff;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+}
+.container {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
 }
-.counter-box {
+.button-container {
     background-color: #e6f0ff;
-    max-width: 600px;
-    width:100%;
-    height: 100%;
+    max-width: 650px;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-wrap: wrap;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
     margin: 0 auto;
+    margin-top: 30px;
+    box-sizing: border-box;
+}
+.buttons {
+    font-size: 22px;
+    width: 250px;
+    font-weight: bold;
+    color: #fff;
+    background-color: #0077be;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    margin: 15px;
+}
+.buttons:hover, .buttons:hover {
+    background-color: #004488;
+}
+.counter-box {
+    max-width: 650px;
+    width:100%;
+    height: 85%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    margin: auto 0;
+    padding: 20px;
 }
 .counter-item {
     width: 25%;
