--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html, body {
     height: 100%;
-    overflow: hidden;
+    /* overflow: hidden; */
     margin: 0;
 }
 body {
@@ -67,7 +67,7 @@ h1 {
     align-items: center;
     box-sizing: border-box;
     margin: auto 0;
-    padding: 20px;
+    padding: 10px;
 }
 .counter-item {
     width: 25%;
@@ -101,4 +101,18 @@ h1 {
         flex-wrap: nowrap;
         flex-direction: column;
     }
+}
+
+.image-container {
+    max-width: 650px;
+    margin: 20px auto;
+    justify-content: center;
+    align-items: center;
+}
+
+.responsive-image {
+    max-width: 100%;
+    height: auto;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
 }
